Squashing Bugs

--- a/dev/scss/reset.scss
+++ b/dev/scss/reset.scss
@@ -12,7 +12,6 @@ fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td {
   background-repeat: no-repeat;
 	border: 0;
-	font-family: inherit;
 	font-size: 100%;
 	font-style: inherit;
 	font-weight: inherit;
